<resources>
    <string name="app_name">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_title">Title</string>
    <string name="hint_note">Note</string>
    <string name="btn_add_note">Add Note</string>
    <string name="btn_update">Update Note</string>
    <string name="btn_back">Back</string>
    <string name="options_menu_about">About</string>
    <string name="about_title">About Notes</string>
    <string name="about_about">Notes App will help you stay organized with all your notes kept in a single place arranged according to date and time, with simple feature to add, delete and update notes</string>


</resources>
