<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="noteViewModel"
            type="com.gauravnadar.notes.viewmodel.NoteViewModel" />
        <variable
            name="note"
            type="com.gauravnadar.notes.database.Note" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_note_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> noteViewModel.addNoteToDatabase()}"
            android:text="@string/btn_add_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/hint_title"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:text="@={noteViewModel.title}"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:text="@={noteViewModel.note}"
            app:layout_constraintBottom_toTopOf="@+id/add_note_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:background="@android:color/white"
            android:hint="@string/hint_note"
            android:textSize="28sp"
            android:padding="16dp"
            android:textAlignment="gravity"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>